Add Handlebars support

--- a/src/pages/index/template.hbs
+++ b/src/pages/index/template.hbs
@@ -6,7 +6,7 @@
     <title>Start page</title>
   </head>
   <body>
-    <h1>Start page</h1>
+    {{{[helpers/title]}}}
     <p>
       Scripts in <code>src/scripts/global/</code> automatically run in every
       page, before any other scripts.<br />
